--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      </ol>
 
      <p>Then I setup my upstream using <strong>git remote add origin "link-to-upstream"</strong></p>
-     <p>After editing the files, I saved it and pushed it to Github using below steps:</p>
+     <p>After editing the files, I saved it and pushed it to Github using the below steps:</p>
      <ol type = "1">
 	     <li>Using <strong>git add "file-name"</strong>, I was able to prepare the files to be committed.</li>
 	     <li>Using <strong> git commit -m "commit-message"</strong>, my files are now ready to be pushed.</li>
